LIFEBOAT/FirstLanguageAfterBootstrap/generated/parser/ScalaLR.output
Nonterminals useless in grammar

    Precedence
    Action
    NamedField
    NamedFields
    Production
    RHS
    LHS
    OptSemicolon
    Rule
    Rules
    Tables
    TypedTerminal
    TypedTerminals
    TokenSpec
    Tokens
    OptInclude
    Notation
    command


Terminals unused in grammar

    NUM
    CODE
    COMMENT
    LEXICALERROR
    ";"
    "="
    "|"
    ":"
    "{"
    "}"
    NL
    "%path"
    "%type"
    "%empty"
    "%notation"
    "%package"
    "%token"
    "%left"
    "%right"
    "%non"
    "%rules"
    "%include"
    "%prec"
    "%tables"


Rules useless in grammar

    7 Precedence: ε
    8           | "%prec" ID

    9 Action: ε
   10       | CODE

   11 NamedField: ID
   12           | ID ":" ID

   13 NamedFields: "%empty"
   14            | NamedField
   15            | NamedField NamedFields

   16 Production: NamedFields Action Precedence

   17 RHS: Production
   18    | Production "|" RHS

   19 LHS: ID ":" Type
   20    | ID

   21 OptSemicolon: ε
   22             | ";"

   23 Rule: LHS "=" RHS

   24 Rules: Rule
   25      | Rules ";" Rule

   26 Tables: ε
   27       | "%tables" ID

   28 TypedTerminal: ID ":" Type
   29              | ID "(" Type ")"
   30              | ID

   31 TypedTerminals: TypedTerminal
   32               | TypedTerminal TypedTerminals

   33 TokenSpec: "%left" TypedTerminals
   34          | "%right" TypedTerminals
   35          | "%non" TypedTerminals
   36          | "%token" TypedTerminals

   37 Tokens: ε
   38       | TokenSpec Tokens

   39 OptInclude: "%empty"
   40           | "%include" CODE

   41 Notation: "%notation" ID "%package" ID "%path" ID Tables OptInclude Tokens "%rules" OptInclude Rules OptSemicolon

   42 command: Notation


Grammar

    0 $accept: Types $end

    1 Types: Type
    2      | Type "," Types

    3 Type: ID
    4     | ID "[" Types "]"
    5     | "(" Types ")"
    6     | "(" ")"


Terminals, with rules where they appear

    $end (0) 0
    error (256)
    ID (258) 3 4
    NUM (259)
    CODE (260)
    COMMENT (261)
    LEXICALERROR (262)
    "[" (263) 4
    "]" (264) 4
    ";" (265)
    "=" (266)
    "|" (267)
    ":" (268)
    "{" (269)
    "}" (270)
    "(" (271) 5 6
    ")" (272) 5 6
    "," (273) 2
    NL (274)
    "%path" (275)
    "%type" (276)
    "%empty" (277)
    "%notation" (278)
    "%package" (279)
    "%token" (280)
    "%left" (281)
    "%right" (282)
    "%non" (283)
    "%rules" (284)
    "%include" (285)
    "%prec" (286)
    "%tables" (287)


Nonterminals, with rules where they appear

    $accept (33)
        on left: 0
    Types (34)
        on left: 1 2
        on right: 0 2 4 5
    Type (35)
        on left: 3 4 5 6
        on right: 1 2


State 0

    0 $accept: • Types $end

    ID      shift, and go to state 1
    "("  shift, and go to state 2

    Types  go to state 3
    Type   go to state 4


State 1

    3 Type: ID •
    4     | ID • "[" Types "]"

    "["  shift, and go to state 5

    $default  reduce using rule 3 (Type)


State 2

    5 Type: "(" • Types ")"
    6     | "(" • ")"

    ID      shift, and go to state 1
    "("  shift, and go to state 2
    ")"  shift, and go to state 6

    Types  go to state 7
    Type   go to state 4


State 3

    0 $accept: Types • $end

    $end  shift, and go to state 8


State 4

    1 Types: Type •
    2      | Type • "," Types

    ","  shift, and go to state 9

    $default  reduce using rule 1 (Types)


State 5

    4 Type: ID "[" • Types "]"

    ID      shift, and go to state 1
    "("  shift, and go to state 2

    Types  go to state 10
    Type   go to state 4


State 6

    6 Type: "(" ")" •

    $default  reduce using rule 6 (Type)


State 7

    5 Type: "(" Types • ")"

    ")"  shift, and go to state 11


State 8

    0 $accept: Types $end •

    $default  accept


State 9

    2 Types: Type "," • Types

    ID      shift, and go to state 1
    "("  shift, and go to state 2

    Types  go to state 12
    Type   go to state 4


State 10

    4 Type: ID "[" Types • "]"

    "]"  shift, and go to state 13


State 11

    5 Type: "(" Types ")" •

    $default  reduce using rule 5 (Type)


State 12

    2 Types: Type "," Types •

    $default  reduce using rule 2 (Types)


State 13

    4 Type: ID "[" Types "]" •

    $default  reduce using rule 4 (Type)
